//爷爷
public class Grandfather extends Being{
    public Grandfather(String name){
        this.name = name;
    }
    public void cheerUp(){
        System.out.println("爷爷：孩子们加油，打倒妖怪!");
    }
}