//小喽啰
public class Heeler extends Being{
    public Heeler(String name){
        this.name = name;
    }
}