//蝎子精
public class Scorpion extends Being{
    public Scorpion(String name){
        this.name = name;
    }
}  