//蛇精
public class Snake extends Being{
    public Snake(String name){
        this.name = name;
    }
    public void cheerUp(){
        System.out.println("蛇精：小的们，把他们打得屁滚尿流，抓起来全都蒸了!");
    }
}